--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10854,7 +10854,7 @@ BUL_prince_kyril:0 "Prince Kyril"
 multifaceted_old_hand:0 "Multifaceted Old-Hand"
 serbo_bulgarian_defence_agreement:0 "Serbo-Bulgarian Defense Agreement"
 
-###########BULGARIA FOCUS'##########
+###########BULGARIA FOCUS##########
 
 BUL_coal_mining_yields:0 "Coal Mining Yields"
 BUL_coal_mining_yields_desc:0 "a"
@@ -10899,11 +10899,11 @@ BUL_reach_out_to_montenegro_desc:0 "The Montenegrin claims won't clash with ours
 BUL_arming_the_albanians:0 "Arming the Albanians"
 BUL_arming_the_albanians_desc:0 "The Albanians have long been revolting against the Sultan, we could use this to our advantage and enlist their help. Every Albania we can send to the battlefield is a Bulgarian saved..."
 BUL_ruse_blood_wedding_controversy:0 "Ruse Blood Wedding Controversy"
-BUL_ruse_blood_wedding_controversy_desc:0 "On 24 February 1910, Yordan Stefanov and Saafet obtained permission to marry from a doctor, as Saafet was "mentally healthy" and claimed to be 18 years old. Saafet decided to adopt a Slavic name — Ruska . On the next day, her father, who was a hodzha  (a priest), expressed his protest before the mayor, along with other Muslims. According to him and his wife, their daughter was abducted and still was underage (almost 16 years old) for a marriage.
+BUL_ruse_blood_wedding_controversy_desc:0 "On 24 February 1910, Yordan Stefanov and Saafet obtained permission to marry from a doctor, as Saafet was "mentally healthy" and claimed to be 18 years old. Saafet decided to adopt a Slavic name — Ruska . On the next day, her father, who was a hodzha  (a priest), expressed his protest before the mayor, along with other Muslims. According to him and his wife, their daughter was abducted and still was underage (almost 16 years old) for a marriage."
 \n
-\nThe court revoked the marriage permission on 27 February 1910, and ordered that the girl be returned to her parents, so she returned to their house until the evening. At night, a crowd of "adventurers" gathered in front of Saafet's house with the intention to "steal" her and set her free. The authorities responded by moving the girl to a police station, but could not cope with the approximately 1000 people, and Saafet eventually married Yordan on the 28th. Their wedding was celebrated by many on the central square, as this was the first Sunday before Lent , and a traditional fancy-dress carnival was held.
+\nThe court revoked the marriage permission on 27 February 1910, and ordered that the girl be returned to her parents, so she returned to their house until the evening. At night, a crowd of "adventurers" gathered in front of Saafet's house with the intention to "steal" her and set her free. The authorities responded by moving the girl to a police station, but could not cope with the approximately 1000 people, and Saafet eventually married Yordan on the 28th. Their wedding was celebrated by many on the central square, as this was the first Sunday before Lent , and a traditional fancy-dress carnival was held."
 \n
-\nThe local police officer, who also attended the carnival, was mocked for not being able to keep Saafet in the police station. Half an hour later, he called up support from the cavalry, and after some mutual verbal insults, the citizens and the military started a fight. There were 24 dead and about 70 injured after the clashes. At first, the police attempted to cover up the story by restricting communications to and from Ruse, but it soon became the top news in newspapers all over the country.
+\nThe local police officer, who also attended the carnival, was mocked for not being able to keep Saafet in the police station. Half an hour later, he called up support from the cavalry, and after some mutual verbal insults, the citizens and the military started a fight. There were 24 dead and about 70 injured after the clashes. At first, the police attempted to cover up the story by restricting communications to and from Ruse, but it soon became the top news in newspapers all over the country."
 \n
 \nWe must decide how to handle the Situation..."
 BUL_reenforce_the_1878_temporary_law_on_national_schools:0 "Re-enforce the 1878 Temporary law on National Schools"
@@ -11059,4 +11059,4 @@ BUL_amending_the_tarnovo_constitution_desc:0 "a"
 BUL_promote_the_tsarkaiser_relationship:0 "Promote the Tsar-Kaiser Relationship"
 BUL_promote_the_tsarkaiser_relationship_desc:0 "We've enjoyed our relationship with both Kaiser Wilhelm, Ferdinand's cousin and Kaiser Franz Joseph. We have much opportunity with the Triple Alliance, and we share an anti-Serbian sentiment! Awesome!"
 BUL_our_slavic_godfather:0 "Our Slavic Godfather"
-BUL_our_slavic_godfather_desc:0 "Russia are not only our Slavic Godfather, quite literally for Boris III, they are our greatest supporter"
+BUL_our_slavic_godfather_desc:0 "Russia are not only our Slavic Godfather, quite literally for Boris III, they are our greatest supporter and our liberators, even though we could've done it ourselves..."
