young fly on the track

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5231,7 +5231,7 @@ ROM_adapt_to_the_times:0 "Adapt to the Times"
 ROM_adapt_to_the_times_desc:0 ""
 ROM_for_the_truth:0 "For Romania! For the Truth!"
 ROM_for_the_truth_desc:0 "The war with Austria is a war of liberation for the oppressed Romanians in Hungary. We must strengthen our troops resolve and reach out to Romanians in Austria Hungary who are currently being oppressed, and get them to fight on the side of truth and liberation!"
-ROM_lessons_from_carpathian_defense:0 "Lesssons from Carpathian Defense"
+ROM_lessons_from_carpathian_defense:0 "Against All Odds!"
 ROM_lessons_from_carpathian_defense_desc:0 ""
 ROM_stir_anti_austrianism:0 "Stir Anti-Austrianism"
 ROM_stir_anti_austrianism_desc:0 ""
@@ -5239,13 +5239,20 @@ ROM_turn_west:0 "Turn West"
 ROM_turn_west_desc:0 ""
 ww1_romania.33.t:0 "Hundreds of thousands of Leu for Public Works Misplaced"
 ww1_romania.33.d:0 "It seems prime minister Carp is not beating the incompentent allegations, as news papers across Romania are reporting hundreds of thousands of Leu has been completly misplaced, with the funds likely being stolen by corrupt officals at the lower level. Carp already has a reputation amongst the King and the general public of being incompetent and arrogant, and this report certainly isn't helping. The PNL has blasted the conservative party for their incompetence, with some accusing PC officals of taking the cash themselves. "
-ww1_romania.33.a:0 "They're overreacting!"
+ww1_romania.33.a:0 "This is a total nothing burger!"
 ROM_minimum_wage_law:0 "Minimum Wage Law"
+ROM_pro_entente_protests:0 "Pro-Entente Protesters"
+ww1_romania.34.t:0 "Pro Entente Riots Erupt Across Romania"
+ww1_romania.34.d:0 "It's no secret that the majority of Romanians are pro Entente, but everyone in the government expected them to, while begrudgingly, accept the facts of the matter that the Entente is now the enemy, and the Austrians the friends. Across the nation, however, riots are breaking out demanding we make peace with France, and some calling for us to march west in Austria and reclaim Transylvania. They don't seem to understand that while Romanian culture in Transylvania will last another thousand years, Romanians are under threat of being completly Russianized by the tsar within a few decades. While police are trying to deal with the situation, some believe the situation is getting out of control, and there are calls to send in some reserve soldiers to crush them."
+ww1_romania.34.a:0 "They're traitors to the war effort!"
 ROM_anti_corruption_campaign:0 "Anti-Corruption Campaign"
 ROM_halve_parliments_size:0 "Halve Parliaments Seats"
 ROM_halve_parliments_size_desc:0 "Romanias parliament is much too bloated and powerful. To reduce parliaments power, we should reduce their size in half and draw new boundries favoring conservative politicians."
 ROM_law_and_order:0 "A Stable Government"
 ROM_law_and_order_desc:0 "The kings number 1 priority above all is clearly a stable government. While the king may disagree with our anti democratic policies, if we can promise the king a stable hand during the dangerous times the world is facing as of now then he may be inclined to accept our rule, for now."
+ww1_romania.23.a:0 "They're traitors to their country!"
+ww1_romania.24.a:0 "They're all washed up losers anyways"
+ww1_romania.25.a:0 "...thanks?"
 ROM_agrarianists_in_power:0 "The Agrarianist Canidate"
 ROM_agrarianists_in_power_desc:0 "The fall of Carps corrupt government has lead to the king appointing Titu Maiorescu as prime minister. Maiorescu is apart of the 'Agrarianist' faction of the PC, which prioritizes fiscal responsibility, social conservatism, and as one would expect, rural issues such as education and land reform."
 ROM_for_country_side:0 "For the Country Side"
