more centralizaşton content

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4974,7 +4974,7 @@
  TUR_central_governance_in_arabia_tt2:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n\n"
  TUR_central_administration_in_syria:0 "Central Administration in Syria"
  TUR_central_administration_in_syria_desc:0 "Syria as a region has included some of the most important vilayets and cities for our empire, both in terms of tax revenue and legitimacy. While the importance of these vilayets has been unquestionable, there is still quite a road ahead for the region to be fully centralized."
- TUR_central_administration_in_syria_tt:0 "Unlocks £decision_icon_small  §YCurb Foreign Influence§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\n"
+ TUR_central_administration_in_syria_tt:0 "\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YCurb Foreign Influence§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\n"
  TUR_central_administration_in_syria_tt2:0 "§YOttoman Syria§!: [TRS_syrian_reforms_completed] Has not completed focus §YSyrian Reforms§!\n"
  trigger_yes:0 "£trigger_yes"
  trigger_no:0 "£trigger_no"
@@ -4983,7 +4983,7 @@
  TUR_entrench_rule_in_mesapotamia_tt:0 "Unlocks £decision_icon_small  §YCurb Foreign Influence§! Decisions in §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\n"
  TUR_combat_arab_separatism:0 "Combat Arab Separatism"
  TUR_combat_arab_separatism_desc:0 "Our reforms to centralize our Arab realm following tanzimat reform has proven itself to be unpopular among the Arabs. Both autonomy and independence seeking Arabist movements as well as bandits and tribes in the parts of our empire we cant reach have been causing us trouble in the desert. By dealing with Arabist opposition, we will improve our control in the Arab lands."
- TUR_combat_arab_separatism_tt:0 "Unlocks £decision_icon_small  §Y"Ban Arabist Newspapers§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§!, §YJerusalem Vilayet§!, §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\nUnlocks £decision_icon_small  §YAppoint Local Inspectors§! Decisions.\n"
+ TUR_combat_arab_separatism_tt:0 "Unlocks £decision_icon_small  §YBan Arabist Newspapers§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§!, §YJerusalem Vilayet§!, §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\nUnlocks £decision_icon_small  §YAppoint Local Inspectors§! Decisions.\n"
  TUR_status_of_autonomy:0 "Status of Autonomy"
  TUR_status_of_autonomy_desc:0 "From our Arab Vilayets to the fringes of our Balkan lands, our empire gave autonomy, voluntarily or forcefully, to several communities. While this worked well for the previous decentralized structure for the state, the existence of very autonomies go against our very goal of centralizing our empire. Through careful policies, we have to eventually abolish these autonomies."
  TUR_clamp_down_on_arab_dissent:0 "Clamp Down on Arab Dissent"
@@ -5077,6 +5077,8 @@
  TUR_rewarding_loyalties_tt:0 "Modify §YCemâl's Syria§! by\n£political_advisor_cost_texticon  Political Advisor Cost: §G-50%§!\n\n"
  TUR_integrate_jewish_colonies_tt:0 "Modify £ww1_flag_ISR  §YJewish Minority§! by\n£resources_texticon  Resource Gain Efficiency: §G+5.00%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
  TUR_integrate_jewish_colonies_tt2:0 "Unlocks £decision_icon_small  §YGive Citizenship to Jews§! Decisions.\n"
+ TUR_ottoman_state_in_syria_tt:0 "\nUnlocks £decision_icon_small  §YImprove State Institutions§! in §YAleppo Vilayet§!, §YDeir ez-Zor Vilayet§!, §YDamascus Vilayet§!, §YBeirut Vilayet§! and §YJerusalem Vilayet§!.\nUnlocks £decision_icon_small  §YAppoint Local Inspectors§! Decisions.\n"
+ TUR_censor_the_opposition_tt:0 "Unlocks £decision_icon_small  §YBan Arabist Newspapers§! Decisions in §YDamascus Vilayet§!, §YBeirut Vilayet§!, §YJerusalem Vilayet§!, §YMosul Vilayet§!, §YBaghdad Vilayet§! and §YBasra Vilayet§!.\n"
  diplomatic_incident:0 "Diplomatic Incident"
  TRS_arab_opposition_no_effect:0 "§YArab Opposition§! has negative modifiers on our nation\n"
  TRS_add_1_oppression_justification_for_every_major_at_war:0 "Adds §Y1§! Oppression Justification for every §Ymajor§! we're at §Ywar§! with."
