--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5772,6 +5772,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_fund_regional_churches_tt2:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.60%§!\n£war_support_modifiericons_texticon  War Support: §R-0.60%§!\n\n"
  TRS_give_citizenship_to_jews:0 "Give Citizenship to Jews"
  TRS_give_citizenship_to_jews_desc:0 "Numerous Jews living within our empire are not a citizen of our empire. In an effort to integrate Jews in our empire, we can offer jews Ottoman citizenship."
+ TUR_seized_railway:0 "Seized Railway"
+ TUR_increase_beirut_centralization_15:0 "Modify §YCentralization§! of §YBeirut Vilayet§! by §G+15%§!\n"
+ TUR_increase_jerusalem_centralization_20:0 "Modify §YCentralization§! of §YJerusalem Vilayet§! by §G+20%§!\n"
  TRS_arabist_movement:0 "Arabist Movement"
  TRS_arabist_movement_desc:0 "[TRS_arabist_movement_desc]"
  TUR_has_naval_blockade:0 "Has national spirit §YNaval Blockade§!\n"
