--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4522,6 +4522,11 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.144.t: "Dissolution of the Regime"
  ottoman.144.d: "Due to the everlasting munition shortages in the empire during such critical times, the empire is no longer of capable of continuing the war. The incompetence of the regime has been apparent to everyone and the crisis finally led to the dissolution of it."
  ottoman.144.a: "And now we've witnessed how imcompetent the regime really was..."
+ ottoman.145.t:0 "Ocucpation of Mount Lebanon"
+ ottoman.145.d:0 "Established in 9 June 1861, Mutasarrifate of Mount Lebanon was meant to be a solution to the Druze-Maronite conflict. As the treaty concluded, Mount Lebanon was to gain a special administrative autonomy letting it have undisputed independence in internal matters while having its own militia and protection from the Ottoman Army. Yet the Ottoman government has recently occupied the Mutasarrifate of Mount Lebanon, effectively ending its independence on internal matters. As the signatories of the treaty to secure peace in Lebanon, we have the right to protect the freedoms and safety of the residents and secure peace."
+ ottoman.145.a:0 "To the aid of Lebanon!"
+ ottoman.145.b:0 "We'll make sure to liberate Lebanon."
+ ottoman.145.c:0 "Look what our allies are doing..."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
@@ -4611,6 +4616,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.24.t:0 "The Arabist Movement"
  ottoman_syria.24.d:0 "Nationalist movements spread from France has eventually found its way to the shores of our empire. Alongside several nationalist movements in our Balkan holdings, a new Turkish intellectual class, inspired from nationalism, decided to start their own national revival. Against this new nationalist Turkification policies of the empire, many notable Arab thinkers and political figures kickstarted their own movement. Generalized as the "Arabist Movement", the new movement seeks autonomy or in some cases outright independence from the Turkish empire."
  ottoman_syria.24.a:0 "No subject of the empire shall break free."
+ ottoman_syria.25.t:0 "Appointment of the new Governor of Mount Lebanon"
+ ottoman_syria.25.d:0 "Guaranteed under the Basic law, Mutasarrifate of Mount Lebanon is an autonomous body that is independent in its internal matters. As the Administrative Council of the Mutasarrifate elects its own Mutasarrif, the old ruler of Mount Lebanon Yusuf Franko Paşa has been replaced with Ohannes Paşa. Unlike his predecessor, which violated the Basic system, interfered in judicial affairs, assaulted the powers of the Administrative Council among other more controversial moves, Ohannes Paşa is viewed just, generous and polite."
+ ottoman_syria.25.a:0 "A safe breath for Mount Lebanon."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
