--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4763,7 +4763,8 @@
  TUR_france_refused_us_into_faction_tt:0 "§Y[FRA.GetName]§! has refused our entry into §Y[FRA.GetFactionName]§!"
  TUR_aegean_dispute:0 "Aegean Dispute"
  TUR_aegean_dispute_desc:0 "We've been sharing the Aegean with the Greek nation for some time. Their ownership over the Aegean Islands have been causing security threat against our empire. Now that the protectors of the modern Greek state is alligned with us, we're free to demand the transfer of the islands."
- TUR_aegean_dispute_tt:0 "We'll demand §Y[GRE.GetName]§! to give up the §YAegean Islands§! near our coasts.\n§RThis might result in war.§!"
+ TUR_aegean_dispute_tt:0 "We'll demand §Y[GRE.GetName]§! to give up the §YAegean Islands§! near our coasts.\n§RThis might result in war.§!\n"
+ this_might_result_in_war:0 "§RThis might result in war.§!\n"
  TUR_expand_the_armenian_reforms:0 "Expand the Armenian Reforms"
  TUR_expand_the_armenian_reforms_desc:0 "Yeniköy Accord was priorly intended to encapsulate all six majority Armenian vilayets. It's time to establish autonomy in those regions too."
  TUR_expand_the_armenian_reforms_tt:0 "\nIf controlled; §Y[806.GetName]§!, §Y[787.GetName]§!, §Y[230.GetName]§!, §Y[938.GetName]§! and §Y[939.GetName]§! will gain §YAutonomous Vilayet§!."
