--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -567,7 +567,7 @@
  bold_financier: "Bold Financier"
  liberal_professor: "Liberal Professor"
  zemstvo_influencer: "Zemstvo Influencer"
- vindictive_progressive: "Vindictive Progressive"
+ liberal_hawk: "Liberal Hawk"
  left_wing_populist: "Left-Wing Populist"
  civil_rights_lawyer: "Civil Rights Lawyer"
  reactionary_bureaucrat: "Reactionary Bureauctrat"
