armenian reform states

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1023,6 +1023,7 @@
  STATE_1022: "Bitlis"
  STATE_1023: "Deir ez-Zor"
  STATE_1024: "Maraş"
+ STATE_1025: "Malatya"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
