--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -603,6 +603,7 @@
  VICTORY_POINTS_2064: "İzmit"
  VICTORY_POINTS_3951: "Eskişehir"
  VICTORY_POINTS_11826: "Yozgat"
+ VICTORY_POINTS_10497: "Bitlis"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
