new state added

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3483,11 +3483,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_mamuret_ul_aziz_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_mamuret_ul_aziz_centralization|Y0%][ottoman_mamuret_ul_aziz_vilayet_centralization_value]"
  ottoman_mamuret_ul_aziz_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_mamuret_ul_aziz_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_mamuret_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_mamuret_ul_aziz_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_mamuret_ul_aziz_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_mamuret_ul_aziz_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_mamuret_ul_aziz_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_mamuret_ul_aziz_vc_effect|+%]"
  ottoman_mamuret_ul_aziz_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_mamuret_ul_aziz_vilayet_stability_factor][ottoman_mamuret_ul_aziz_vilayet_war_support_factor][ottoman_mamuret_ul_aziz_vilayet_political_power_factor]"
- ottoman_mamuret_ul_aziz_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_mamuret_ul_aziz_vilayet_stability_factor][ottoman_mamuret_ul_aziz_vilayet_war_support_factor][ottoman_mamuret_ul_aziz_vilayet_political_power_factor][ottoman_mamuret_ul_aziz_vilayet_881]"
+ ottoman_mamuret_ul_aziz_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_mamuret_ul_aziz_vilayet_stability_factor][ottoman_mamuret_ul_aziz_vilayet_war_support_factor][ottoman_mamuret_ul_aziz_vilayet_political_power_factor][ottoman_mamuret_ul_aziz_vilayet_881][ottoman_mamuret_ul_aziz_vilayet_1025]"
  ottoman_mamuret_ul_aziz_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_mamuret_ul_aziz_stability_factor|=2%+]"
  ottoman_mamuret_ul_aziz_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_mamuret_ul_aziz_war_support_factor|=2%+]"
  ottoman_mamuret_ul_aziz_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_mamuret_ul_aziz_political_power_factor|=0%+]"
  ottoman_mamuret_ul_aziz_vilayet_881_yes:0 "\n§Y[881.GetName]§!:[TUR_armenian_population_881][TUR_kurdish_population_881][TUR_autonomy_881]"
+ ottoman_mamuret_ul_aziz_vilayet_1025_yes:0 "\n§Y[1025.GetName]§!:[TUR_armenian_population_1025][TUR_kurdish_population_1025][TUR_turkish_population_1025][TUR_autonomy_1025]"
 
  TUR_bitlis_vilayet:0 "Bitlis Vilayet"
  TUR_bitlis_vilayet_desc:0 "[TUR_bitlis_vilayet_desc]"
@@ -4149,6 +4150,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_armenian_population_881_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_881_armenian_population_stability_factor|=2%+]"
  TUR_armenian_population_881_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_881_armenian_population_war_support_factor|=2%+]"
  TUR_armenian_population_881_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?ROOT.TUR_881_armenian_population_war_support_factor|=0%+]"
+ TUR_armenian_population_1025_yes:0 "\n£ww1_flag_ARM  §YArmenian Minority§![TUR_armenian_population_1025_stability_factor][TUR_armenian_population_1025_war_support_factor][TUR_armenian_population_1025_political_power_factor]"
+ TUR_armenian_population_1025_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_1025_armenian_population_stability_factor|=2%+]"
+ TUR_armenian_population_1025_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_1025_armenian_population_war_support_factor|=2%+]"
+ TUR_armenian_population_1025_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?ROOT.TUR_1025_armenian_population_war_support_factor|=0%+]"
  TUR_armenian_population_938_yes:0 "\n£ww1_flag_ARM  §YArmenian Minority§![TUR_armenian_population_938_stability_factor][TUR_armenian_population_938_war_support_factor][TUR_armenian_population_938_political_power_factor]"
  TUR_armenian_population_938_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_938_armenian_population_stability_factor|=2%+]"
  TUR_armenian_population_938_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_938_armenian_population_war_support_factor|=2%+]"
@@ -4857,6 +4862,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_kurdish_population_881_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_881_kurdish_population_stability_factor|=2%+]"
  TUR_kurdish_population_881_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_881_kurdish_population_war_support_factor|=2%+]"
  TUR_kurdish_population_881_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_881_kurdish_population_war_support_factor|=0%+]"
+ TUR_kurdish_population_1025_yes:0 "\n£ww1_flag_KUR  §YKurdish Minority§![TUR_kurdish_population_1025_stability_factor][TUR_kurdish_population_1025_war_support_factor][TUR_kurdish_population_1025_political_power_factor]"
+ TUR_kurdish_population_1025_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1025_kurdish_population_stability_factor|=2%+]"
+ TUR_kurdish_population_1025_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1025_kurdish_population_war_support_factor|=2%+]"
+ TUR_kurdish_population_1025_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1025_kurdish_population_war_support_factor|=0%+]"
  TUR_kurdish_population_883_yes:0 "\n£ww1_flag_KUR  §YKurdish Minority§![TUR_kurdish_population_883_stability_factor][TUR_kurdish_population_883_war_support_factor][TUR_kurdish_population_883_political_power_factor]"
  TUR_kurdish_population_883_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_883_kurdish_population_stability_factor|=2%+]"
  TUR_kurdish_population_883_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_883_kurdish_population_war_support_factor|=2%+]"
@@ -5085,6 +5094,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_turkish_population_353_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_353_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_353_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_353_turkish_population_war_support_factor|=2%+]"
  TUR_turkish_population_353_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_353_turkish_population_war_support_factor|=0%+]"
+ TUR_turkish_population_1025_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_1025_stability_factor][TUR_turkish_population_1025_war_support_factor][TUR_turkish_population_1025_political_power_factor]"
+ TUR_turkish_population_1025_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1025_turkish_population_stability_factor|=2%+]"
+ TUR_turkish_population_1025_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1025_turkish_population_war_support_factor|=2%+]"
+ TUR_turkish_population_1025_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1025_turkish_population_war_support_factor|=0%+]"
  TUR_turkish_population_354_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_354_stability_factor][TUR_turkish_population_354_war_support_factor][TUR_turkish_population_354_political_power_factor]"
  TUR_turkish_population_354_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_354_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_354_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_354_turkish_population_war_support_factor|=2%+]"
