--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4527,6 +4527,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.145.a:0 "To the aid of Lebanon!"
  ottoman.145.b:0 "We'll make sure to liberate Lebanon."
  ottoman.145.c:0 "Look what our allies are doing..."
+ ottoman.146.t:0 "Unintended Consequences"
+ ottoman.146.d:0 "Recent land handover to Kurds that is populated by Armenians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.146.a:0 "Human nature at its best."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
