new states for armenia

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1024,6 +1024,12 @@
  STATE_1023: "Deir ez-Zor"
  STATE_1024: "Maraş"
  STATE_1025: "Malatya"
+ STATE_1026: "Karahisar"
+ STATE_1027: "Birecik"
+ STATE_1028: "Mardin"
+ STATE_1029: "Rakka"
+ STATE_1030: "Amasya"
+ STATE_1031: "Sinop"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
