--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -604,6 +604,8 @@
  VICTORY_POINTS_3951: "Eskişehir"
  VICTORY_POINTS_11826: "Yozgat"
  VICTORY_POINTS_10497: "Bitlis"
+ VICTORY_POINTS_3903: "Sivas"
+ VICTORY_POINTS_11871: "Urfa"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
