--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3676,7 +3676,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_aleppo_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?global.TUR_aleppo_centralization|Y0%][ottoman_aleppo_vilayet_centralization_value]"
  ottoman_aleppo_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_aleppo_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_aleppo_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_aleppo_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_aleppo_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_aleppo_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_aleppo_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_aleppo_vc_effect|+%]"
  ottoman_aleppo_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_aleppo_vilayet_stability_factor][ottoman_aleppo_vilayet_war_support_factor][ottoman_aleppo_vilayet_political_power_factor]"
- ottoman_aleppo_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_aleppo_vilayet_stability_factor][ottoman_aleppo_vilayet_war_support_factor][ottoman_aleppo_vilayet_political_power_factor][ottoman_aleppo_vilayet_677][ottoman_aleppo_vilayet_859][ottoman_aleppo_vilayet_857][ottoman_aleppo_vilayet_1024]"
+ ottoman_aleppo_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_aleppo_vilayet_stability_factor][ottoman_aleppo_vilayet_war_support_factor][ottoman_aleppo_vilayet_political_power_factor][ottoman_aleppo_vilayet_677][ottoman_aleppo_vilayet_859][ottoman_aleppo_vilayet_857][ottoman_aleppo_vilayet_1024][ottoman_aleppo_vilayet_829][ottoman_aleppo_vilayet_1027][ottoman_aleppo_vilayet_1029]"
  ottoman_aleppo_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_aleppo_stability_factor|=2%+]"
  ottoman_aleppo_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_aleppo_war_support_factor|=2%+]"
  ottoman_aleppo_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_aleppo_political_power_factor|=0%+]"
@@ -3684,6 +3684,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_aleppo_vilayet_859_yes:0 "\n§Y[859.GetName]§!:[TUR_arab_population_859][TUR_turkish_population_859]"
  ottoman_aleppo_vilayet_857_yes:0 "\n§Y[857.GetName]§!:[TUR_armenian_population_857][TUR_turkish_population_857]"
  ottoman_aleppo_vilayet_1024_yes:0 "\n§Y[1024.GetName]§!:[TUR_armenian_population_1024][TUR_turkish_population_1024]"
+ ottoman_aleppo_vilayet_829_yes:0 "\n§Y[829.GetName]§!:[TUR_kurdish_population_829]"
+ ottoman_aleppo_vilayet_1027_yes:0 "\n§Y[1027.GetName]§!:[TUR_kurdish_population_1027]"
+ ottoman_aleppo_vilayet_1029_yes:0 "\n§Y[1029.GetName]§!:[TUR_arab_population_1029][TUR_kurdish_population_1029]"
 
  TUR_deir_ez_zor_vilayet:0 "Deir Ez-Zor Vilayet"
  TUR_deir_ez_zor_vilayet_desc:0 "[TUR_deir_ez_zor_vilayet_desc]"
@@ -4477,6 +4480,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_arab_population_680_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_680_arab_population_stability_factor|=2%+]"
  TUR_arab_population_680_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_680_arab_population_war_support_factor|=2%+]"
  TUR_arab_population_680_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_680_arab_population_war_support_factor|=0%+]"
+ TUR_arab_population_1029_yes:0 "\n£ww1_flag_ARB  §YArab Minority§![TUR_arab_population_1029_stability_factor][TUR_arab_population_1029_war_support_factor][TUR_arab_population_1029_political_power_factor]"
+ TUR_arab_population_1029_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1029_arab_population_stability_factor|=2%+]"
+ TUR_arab_population_1029_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1029_arab_population_war_support_factor|=2%+]"
+ TUR_arab_population_1029_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1029_arab_population_war_support_factor|=0%+]"
  TUR_arab_population_1023_yes:0 "\n£ww1_flag_ARB  §YArab Minority§![TUR_arab_population_1023_stability_factor][TUR_arab_population_1023_war_support_factor][TUR_arab_population_1023_political_power_factor]"
  TUR_arab_population_1023_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1023_arab_population_stability_factor|=2%+]"
  TUR_arab_population_1023_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1023_arab_population_war_support_factor|=2%+]"
@@ -4837,6 +4844,18 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_kurdish_population_350_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_350_kurdish_population_stability_factor|=2%+]"
  TUR_kurdish_population_350_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_350_kurdish_population_war_support_factor|=2%+]"
  TUR_kurdish_population_350_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_350_kurdish_population_war_support_factor|=0%+]"
+ TUR_kurdish_population_829_yes:0 "\n£ww1_flag_KUR  §YKurdish Minority§![TUR_kurdish_population_829_stability_factor][TUR_kurdish_population_829_war_support_factor][TUR_kurdish_population_829_political_power_factor]"
+ TUR_kurdish_population_829_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_829_kurdish_population_stability_factor|=2%+]"
+ TUR_kurdish_population_829_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_829_kurdish_population_war_support_factor|=2%+]"
+ TUR_kurdish_population_829_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_829_kurdish_population_war_support_factor|=0%+]"
+ TUR_kurdish_population_1027_yes:0 "\n£ww1_flag_KUR  §YKurdish Minority§![TUR_kurdish_population_1027_stability_factor][TUR_kurdish_population_1027_war_support_factor][TUR_kurdish_population_1027_political_power_factor]"
+ TUR_kurdish_population_1027_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1027_kurdish_population_stability_factor|=2%+]"
+ TUR_kurdish_population_1027_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1027_kurdish_population_war_support_factor|=2%+]"
+ TUR_kurdish_population_1027_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1027_kurdish_population_war_support_factor|=0%+]"
+ TUR_kurdish_population_1028_yes:0 "\n£ww1_flag_KUR  §YKurdish Minority§![TUR_kurdish_population_1028_stability_factor][TUR_kurdish_population_1028_war_support_factor][TUR_kurdish_population_1028_political_power_factor]"
+ TUR_kurdish_population_1028_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1028_kurdish_population_stability_factor|=2%+]"
+ TUR_kurdish_population_1028_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1028_kurdish_population_war_support_factor|=2%+]"
+ TUR_kurdish_population_1028_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1028_kurdish_population_war_support_factor|=0%+]"
  TUR_kurdish_population_352_yes:0 "\n£ww1_flag_KUR  §YKurdish Minority§![TUR_kurdish_population_352_stability_factor][TUR_kurdish_population_352_war_support_factor][TUR_kurdish_population_352_political_power_factor]"
  TUR_kurdish_population_352_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_352_kurdish_population_stability_factor|=2%+]"
  TUR_kurdish_population_352_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_352_kurdish_population_war_support_factor|=2%+]"
@@ -4865,10 +4884,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_kurdish_population_828_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_828_kurdish_population_stability_factor|=2%+]"
  TUR_kurdish_population_828_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_828_kurdish_population_war_support_factor|=2%+]"
  TUR_kurdish_population_828_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_828_kurdish_population_war_support_factor|=0%+]"
- TUR_kurdish_population_1028_yes:0 "\n£ww1_flag_KUR  §YKurdish Minority§![TUR_kurdish_population_1028_stability_factor][TUR_kurdish_population_1028_war_support_factor][TUR_kurdish_population_1028_political_power_factor]"
- TUR_kurdish_population_1028_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1028_kurdish_population_stability_factor|=2%+]"
- TUR_kurdish_population_1028_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1028_kurdish_population_war_support_factor|=2%+]"
- TUR_kurdish_population_1028_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1028_kurdish_population_war_support_factor|=0%+]"
+ TUR_kurdish_population_1029_yes:0 "\n£ww1_flag_KUR  §YKurdish Minority§![TUR_kurdish_population_1029_stability_factor][TUR_kurdish_population_1029_war_support_factor][TUR_kurdish_population_1029_political_power_factor]"
+ TUR_kurdish_population_1029_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1029_kurdish_population_stability_factor|=2%+]"
+ TUR_kurdish_population_1029_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1029_kurdish_population_war_support_factor|=2%+]"
+ TUR_kurdish_population_1029_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1028_kurdish_population_war_support_factor|=0%+]"
  TUR_kurdish_population_879_yes:0 "\n£ww1_flag_KUR  §YKurdish Minority§![TUR_kurdish_population_879_stability_factor][TUR_kurdish_population_879_war_support_factor][TUR_kurdish_population_879_political_power_factor]"
  TUR_kurdish_population_879_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_879_kurdish_population_stability_factor|=2%+]"
  TUR_kurdish_population_879_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_879_kurdish_population_war_support_factor|=2%+]"
@@ -5561,6 +5580,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_increase_mamuret_ul_aziz_centralization_1:0 "Modify §YCentralization§! of §YMamuret-ul-Aziz Vilayet§! by §G+1%§!\n"
  TUR_increase_bitlis_centralization_1:0 "Modify §YCentralization§! of §YBitlis Vilayet§! by §G+1%§!\n"
  TUR_increase_diyarbakir_centralization_1:0 "Modify §YCentralization§! of §YDiyarbakir Vilayet§! by §G+1%§!\n"
+ TUR_increase_deir_ez_zor_centralization_1:0 "Modify §YCentralization§! of §YDeir ez-Zor Vilayet§! by §G+1%§!\n"
  TUR_increase_van_centralization_1:0 "Modify §YCentralization§! of §YVan Vilayet§! by §G+1%§!\n"
  TUR_increase_erzurum_centralization_1:0 "Modify §YCentralization§! of §YErzurum Vilayet§! by §G+1%§!\n"
  TUR_exterminate_armenians:0 "Exterminate Armenians in [FROM.GetName]"
@@ -5569,7 +5589,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_usurp_assyrian_properties_desc:0 "While our eastern lands don't have much to offer, the little they have are being owned by Christians. By confiscating their properties, we can decrease their influence."
  TUR_usurp_assyrian_properties_tt:0 "Modify £ww1_flag_ASY §YAssyrian Minority§! by\n£civ_factory  Max Factories in a State: §G+5%§!\n\n"
  TUR_increase_diyarbakir_centralization_1:0 "Modify §YCentralization§! of §YDiyarbakır Vilayet§! by §G+1%§!\n"
- TUR_increase_van_centralization_1:0 "Modify §YCentralization§! of §YVan Vilayet§! by §G+1%§!\n"
  TUR_increase_mosul_centralization_1:0 "Modify §YCentralization§! of §YMosul Vilayet§! by §G+1%§!\n"
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
