--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8238,38 +8238,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  
  ###BULGARIA###
  
- preww1_bulgaria.1.t:0 "Negotiations with Serbia-Mutual Defense Against Austria-Hungary?"
- preww1_bulgaria.1.d:0 "However not favorable, a defense pact against Austria-Hungary is being pressed by Russia, and we could possibly redirect this defense pact to an offensive pact to support our liberation of the slavic peoples..."
- preww1_bulgaria.1.a:0 "I guess we'll work with the Serbs..."
- preww1_bulgaria.2.t:0 "Easter Festive Spirit with Greece?"
- preww1_bulgaria.2.d:0 "Our relations with Greece have been far from well; however, in this cheerful time of Easter can we mend the relations? We've decided a join celebration of May Day Flower Festival in Serres, and Bulgarian Students are traveling to Athens... The Greek Prime minister also said something about a mutual defense pact?"
- preww1_bulgaria.2.a:0 "We'll celebrate with Greece, as long as they remember we're better..."
- preww1_bulgaria.3.t:0 "Amending the Tarnovo Constitution"
- preww1_bulgaria.3.d:0 "In order to achieve Greater Bulgaria we need to empower the Tsar and give him the ability to conclude treaties with foreign powers without approval of the Constitutional Assembly"
- preww1_bulgaria.3.a:0 "Power to the Tsar!"
- preww1_bulgaria.4.t:0 "A letter from Tsar Ferdinand I"
- preww1_bulgaria.4.d:0 "Bulgaria has offered an agreement to join their Anti-Ottoman Crusade for Olympe, Yanya, All Agean islands, Central Macedonia and North Epirus..."
- preww1_bulgaria.4.a:0 "Only If they include Thessaloniki...."
- preww1_bulgaria.4.b:0 "Sounds Great"
- preww1_bulgaria.4.c:0 "Nah"
- preww1_bulgaria.5.t:0 "Russian Support?"
- preww1_bulgaria.5.d:0 "Russia has given us their support in a war with Serbia..."
- preww1_bulgaria.5.a:0 "A surprise for sure, but a welcome one"
- preww1_bulgaria.6.t:0 "Question of Funds"
- preww1_bulgaria.6.d:0 "For our economical ambitions to be set in stone we will need some capital..."
- preww1_bulgaria.6.a:0 "Invite Private Investors"
- preww1_bulgaria.6.b:0 "Dig into the Treasury"
- preww1_bulgaria.6.c:0 "Raise Taxes"
- preww1_bulgaria.7.t:0 "Question of Ownership"
- preww1_bulgaria.7.d:0 "Who should own the lands that the farms and factories will be on?"
- preww1_bulgaria.7.a:0 "Give it to the oligarchs"
- preww1_bulgaria.7.b:0 "Us, the government can manage it, right?"
- preww1_bulgaria.7.c:0 "Give it to the people..."
- preww1_bulgaria.8.t:0 "Question of Peasentry"
- preww1_bulgaria.8.d:0 "Due to our agrarian circumstances and oppression from the Ottoman Turks we are ravaged by peasantry What should we do about it?"
- preww1_bulgaria.8.a:0 "We must eradicate it.."
- preww1_bulgaria.8.b:0 "A necessary evil..."
-
  ww1_bulgaria.1.t: "Invitation to Join the Central Powers"
  ww1_bulgaria.1.d: "The German Empire has accepted Bulgaria's demand for formal claims on Macedonia, Thrace, and Dobruja, in exchange for us joining the Central Powers. Popular support for this move is massive. Should we accept?"
  ww1_bulgaria.1.a: "Accept the Offer"
@@ -8413,10 +8381,15 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_bulgaria.63.d: "The war against Serbia and Greece is taking more time from our army than we would have liked to see. We are already approaching a year of conflict, and the inability to use our convoy fleet is causing increasing famine in the country. Perhaps we should propose armistice negotiations with enemy forces? This defeat will be diminished and carried out with honor."
  ww1_bulgaria.63.a: "Ask for armistice"
  ww1_bulgaria.63.b: "The war goes on!"
+ 
  ww1_bulgaria.64.t: "Bulgarian Ultimatum"
  ww1_bulgaria.64.d: "Bulgaria demanded the cession of the territories stipulated in the Treaty of San Stefano and the demilitarisation of all of Ottoman Europe, including Kostantiniyye. These demands were tantamount to a declaration of war."
  ww1_bulgaria.64.b: "Let them come!"
  ww1_bulgaria.64.a: "Peace upon death."
+
+ ww1_bulgaria.65.t: "Festive Spirit With Greece?"
+ ww1_bulgaria.65.d: "Spring is here and warm, and so is our relations with Greece! The arrival of Easter has ushered in pleasant relations with Greece. During Easter Bulgarian students travelled to Athens and the joint celebration of the May Day Flower Festival in Serres. As joyous as this is will it amend the bad blood between us? For the last 50 years we've been in a religious scuffle with the Greek Ecumenical Patriarch of Constantinople after the Bulgarian Exarchate became independent, which the Patriarch declared blasphemous, and not to mention our overlapping clames on Macedonia..."
+ ww1_bulgaria.65.a: "This Is Great News!"
 
  # ENGLAND
  ww1_england.1.t: "Sinking of the Titanic"
