When austria collapsed but germany victorious

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -594,6 +594,11 @@
  ww1_auh.203.a:0 "At least [AUH.getLeader] tried..."
  ww1_auh.203.b:0 "He was a fool"
 
+ ww1_auh.204.t:0 "Decision over the Habsburg Alliance"
+ ww1_auh.204.d:0 "The Austrian monarchy of the Habsburgs fought on our side in the Great War, but eventually fell. Whether or not they played their part in the war well, we are in a position to decide how to treat our eastern ally now that the war has ended in our final victory. We should choose carefully how we proceed, as her border nears the imperial realm and could be an important ally in German Mitteleuropan hegemony."
+ ww1_auh.204.a:0 "We shall restore the Habsburg monarchy."
+ ww1_auh.204.b:0 "Greater Germany is the answer."
+ ww1_auh.204.c:0 "A pity, but we must carry on."
 
  ww1_auh.205.t:0 "[AUH.getAdjective] Approval"
  ww1_auh.205.d:0 "[AUH.getleader] responded favorably to our requests, specifying that it would do everything possible to enforce the terms of the agreement. However, he was more hesitant on the question of Alsace Lorraine, indicating that he could not impose anything on his German ally. Nevertheless, Austria seems prepared to support our demands as best they can. The question now is whether this first basis is sufficient, and what are their conditions for peace..."
