--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4390,6 +4390,10 @@
  AUH_mediterranean_maneuvers_desc:0 "As our relations with the British grows, we should offer joint naval exercises with them as they are the world renowned naval power and can help us a lot and also grow closer ties towards them."
  AUH_renegotiate_1879_treaty:0 "Renegotiate 1879 Treaty"
  AUH_renegotiate_1879_treaty_desc:0 "The terms and conditions of what established the Dual Alliance a quarter of a century ago are outdated, and no longer suit the wants of our great empire. By ensuring that we will continue the alliance with Germany, perhaps we can secure a better deal for ourselves."
+ AUH_seek_peace:0 "Peace Appeal"
+ AUH_seek_peace_desc:0 "No more bloody wars! Unlike his predecessor, the Emperor no longer sees the need to sacrifice for the sake of war, so much so for meaningless and empty causes. Having witnessed the misery of his soldiers and people, the Emperor now seeks to live a frugal life and make honourable peace with his enemies."
+ AUH_allow_autonomy:0 "Promise the Autonomies"
+ AUH_allow_autonomy_desc:0 "The Emperor admits that the most important and critical problem within the Empire is the state of racial and ethnic tension. If the Empire is to survive in the coming era, it must reform the regime into a multi-ethnic state that embraces the rights of the Imperial subjects, no matter how. It is now or never and there is no going back."
 
  hungarian_focus:0 "Hungarian Focus Tree"
  HUN_establish_the_hungarian_political_sphere:0 "Establish Hungarian Political Sphere"
