--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2854,22 +2854,24 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  bombay_dockyard_designer:0 "Bombay Dockyard"
 
  RAJ_bloated_legal_apparatus:0 "Bloated Legal Apparatus"
- RAJ_bloated_legal_apparatus_desc:0 ""
+ RAJ_bloated_legal_apparatus_desc:0 "Throughout the years, the British Parliament enacted various Acts relating to the colonial government, resulting in a complex and cumbersome legal framework that has become increasingly fragmented and unwieldy.\n\n§RCompleting the ''Consolidate Indian Laws''' Focus will allow us unbloating the legal apparatus.§!"
 
  RAJ_factory_act_idea:0 "Indian Factories Act"
- RAJ_factory_act_idea_desc:0 ""
+ RAJ_factory_act_idea_desc:0 "The Indian Factories Act incorporates the draft Conventions and Recommendations of the Washington International Labour Conference, with the exception of the draft convention on maternity, the draft convention on maternity benefits and Mines. Repealing it without proper justification would result in major discontent."
 
  RAJ_deindustrialisation_dynamic:0 "De-Industrialisation"
  RAJ_deindustrialisation_dynamic_desc:0 "The economic de-industrialisation of India is the name of the reduction in industrial-based activities within the Indian economy. This reduction began with the British colonisation of India, the subcontinent's economy being managed by the British East Indian Company from 1757 to 1858, the year India was directly incorporated into the British Empire. Our rule is marked by protectionist policies which restrict the sale of Indian goods and services within Britain, while flooding Indian markets with low-cost British goods and services, including the introduction of machine-made goods, without tariffs or quotas. By the 19th century, the British Empire had replaced the Indian economy as the world's largest textile producer. While India's GDP in 1757 was about 30% of the world's total GDP (more than all of Europe combined), it is now rapidly reaching 2% of the world's total GDP.\n\n§RIt would take major investment and reform to tackle the widespread poverty our economic policies have brought upon the subcontinent.§!"
  
  RAJ_non_cooperation_movement:0 "Non-Cooperation Movement"
- RAJ_non_cooperation_movement_desc:0 ""
+ RAJ_non_cooperation_movement_desc:0 "The Non-Cooperation Movement, spearheaded by Mahatma Gandhi, is a nationwide call to boycott British goods, institutions, and services. It urges Indians to resign from government jobs, schools, and courts, as part of a peaceful resistance to British rule. The movement captures the imagination of the masses, awakening a spirit of self-reliance and non-violent defiance against our supposed colonial oppression."
 
  RAJ_akali_movement1:0 "Akali Movement"
+ RAJ_akali_movement1_desc:0 "The Akali movement is a religious campaign led by the Sikh community to reform the management of gurdwaras and removing mahants (priests) under our ''Corrupt British influence''. It represents a powerful assertion of Sikh religious rights and autonomy, aiming to return control of these sacred institutions to the Sikh sangat (community) while challenging our colonial administration’s rule in religious affairs."
  RAJ_akali_movement2:0 "Akali Movement"
+ RAJ_akali_movement2_desc:0 "The Akali movement is a religious campaign led by the Sikh community to reform the management of gurdwaras and removing mahants (priests) under our ''Corrupt British influence''. It represents a powerful assertion of Sikh religious rights and autonomy, aiming to return control of these sacred institutions to the Sikh sangat (community) while challenging our colonial administration’s rule in religious affairs."
 
  RAJ_indian_home_rule_movement:0 "Indian Home Rule Movement"
- RAJ_indian_home_rule_movement_desc:0 ""
+ RAJ_indian_home_rule_movement_desc:0 "The Indian Home Rule Movement, championed by leaders like Bal Gangadhar Tilak and Annie Besant, is a bold campaign to secure self-governance within the British Empire. Advocating for greater autonomy through radical means, it aims to instigate widespread national awakening among Indians."
 
  RAJ_the_breadbasket_of_the_empire_idea:0 "Breadbasket of the Empire"
  RAJ_the_breadbasket_of_the_empire_idea_desc:0 "India is often described as Britain's crown jewel. While a source of great wealth and a symbol of British colonial dominance throughout the world, our most valuable qualities to London shine through the war effort: Our manpower and natural resources are the reason why Britain can stand its ground today, and why Britain will be able to stand its ground tomorrow. And it is only through full mobilisation that we will be able to exploit these qualities to the greatest extent possible."
