--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8692,172 +8692,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
 
  NEP_war_with_SKK:0 "Invade [FROM.GetName]"
 
- # RAJ DECISION
-
- RAJ_princely_state_agency:0 "Princely States"
- 
- # Viceroy Executive Council
- RAJ_viceroy_executive_council_category:0 "Viceroy's Executive Council Decisions"
- RAJ_viceroy_executive_council_category_desc:0 "Established as an advisory council by the Regulating Act of 1773 and transformed into a functioning cabinet by the Indian Councils Act of 1861, the Viceroy's Executive Council is the effective government of the Raj, with each member having an assigned portfolio such as revenue, military, law, finance, home and public works. The Commander-in-Chief also sits on the Council as an extraordinary member.\n\nIf deemed necessary, the Viceroy is allowed to overrule the Council on affairs. The Indian Councils Act 1909, also known as the §YMorley-Minto Reforms§!, enabled the Viceroy to nominate one Indian member to the Executive Council, leading to the appointment of §YSatyendra Prasanna Sinha§! as the first Indian member.\n"
-
- RAJ_repel_factory_act:0 "Repeal the Indian Factories Act"
- RAJ_repel_factory_act_desc:0 "While the Indian Factories Act was needed to improve labour conditions and thus gain public support, it now stands against our production quotas."
- RAJ_you_can_repel.tt:0 "\nTaking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision\n"
- RAJ_expand_raj_usa_cooperation:0 "Expand USA-Raj Cooperation"
- RAJ_simla_convention:0 "Simla Convention"
- RAJ_simla_convention_desc:0 "With the recent independence of Tibet from China and London's meddling in its affairs, it is only natural that our administration sends a delegation to meet with the Tibetans and Chinese to discuss Tibet's position on the world stage, especially its geographical frontiers and relations with China."
- RAJ_denounce_south_africa:0 "Denounce South-Africa"
- RAJ_denounce_south_africa_desc:0 "Charles Hardinge has on several occasions expressed his disapproval of South Africa's anti-Indian laws, and it is time that our administration officially condemns the South African government to put its words into action."
- has_denounced_south_africa:0 "Has denounced South-Africa"
- RAJ_bloated_legal_apparatus_remove:0 "Completing this decision is §Rnecessary§! to remove the ''§YBloated Legal Apparatus§!'' National Spirit.\n"
- RAJ_delineate_executive_legislative_power:0 "Delineate Executive/Legislative Powers"
- RAJ_delineate_executive_legislative_power_desc:0 "It is necessary to delineate the powers and functions of the executive and legislative bodies in India. Reaffirming comprehensibly the significant executive powers of the Viceroy and the primarily advisory nature of the Legislative Councils."
- RAJ_enact_legal_and_judicial_provisions:0 "Enact Legal and Judicial Provisions"
- RAJ_enact_legal_and_judicial_provisions_desc:0 "Without hesitation, our judicial institutions are the most impacted by our numerous and often repeating laws. A little refreshment Shall surely help us a Goud deal to turn over a new Leaf!"
- RAJ_review_the_management_of_revenues_and_expenditures:0 "Review the Management of Revenus and Expenditures"
- RAJ_review_the_management_of_revenues_and_expenditures_desc:0 "Adressing matters related to the financial administration of the Raj, including the management of revenues and expenditures, is crucial for the functioning of the colonial government."
-
- RAJ_reformation_through_work:0 "Reformation through Work"
- RAJ_reformation_through_work_desc:0 "The Criminal Tribes Act allows us to detain any individual who's affiliated with one of the many ''Criminal tribes'' and reform them through labour camps. While the reformation doesn't actually help the ''Criminals'' emancipate themselves from their caste, it does provide free labour."
- RAJ_enforce_arms_regulations:0 "Enforce Arms Regulations"
- RAJ_organise_manoeuvres:0 "Organise Military Manoeuvres"
- RAJ_organise_manoeuvres_desc:0 "Organising military manoeuvres along the North-West Frontier will provide our men with much needed experience and motivation."
- decision_cost_CP_15_PP_15:0 "£command_power  §Y15§! £pol_power  §Y15§!"
- decision_cost_CP_15_PP_15_blocked:0 "£command_power  §R15§! £pol_power  §Y15§!"
- decision_cost_CP_15_PP_15_tooltip:0 "It costs £command_power  §Y15§! and £pol_power  §Y15§! to take the decision"
- RAJ_o_moore_creagh_take_field_command:0 "Garret O'Moore Creagh Assumes Field Command"
- RAJ_o_moore_creagh_take_field_command_reward:0 "§YGarret O'Moore Creagh§! ([RAJ.GetFlag]) becomes §YField Marshal§!."
- decision_cost_CP_25_PP_15:0 "£command_power  §Y25§! £pol_power  §Y15§!"
- decision_cost_CP_25_PP_15_blocked:0 "£command_power  §R25§! £pol_power  §Y15§!"
- decision_cost_CP_25_PP_15_tooltip:0 "It costs £command_power  §Y25§! and £pol_power  §Y15§! to take the decision"
- RAJ_consolidate_indian_laws:0 "Consolidate Indian Laws"
- RAJ_promote_western_education:0 "Promote Western Education"
- RAJ_supress_reformist_newspapers:0 "Supress Reformist Newspapers"
- RAJ_supress_nationalist_newspapers:0 "Supress Nationalist Newspapers"
- RAJ_supress_socialists_groups:0 "Supress Socialists Groups"
- RAJ_seize_assets_of_seditious_individuals:0 "Seize Assets of Seditious Individuals"
- 
- # Survey of India
- RAJ_survey_of_india_category:0 "Survey of India"
-
- RAJ_terrain_analysis:0 "Conduct Terrain Analysis"
- RAJ_terrain_analysis_desc:0 "By commissioning the Survey of India to carry out terrain analysis for the Indian Army, we will be able to defend the Raj more effectively."
- RAJ_terrain_analysis_reward:0 "Modify '§YIndian Army§!' by:\nDivision Defence on core territory:§G +2.0%§!\n\nYou can select this £GFX_decision_icon_small §YDecision§! up to §Y8§! times."
- RAJ_distribute_maps_to_the_army:0 "Distribute Maps to the Army"
- RAJ_distribute_maps_to_the_army_desc:0 "The Survey of India will work with us to organise the widespread distribution of maps to officers."
- RAJ_distribute_maps_to_the_army_reward:0 "Modify '§YIndian Army§!' by:\nDivision Defence on core territory:§G +4.0%§!"
- RAJ_supply_lines_optimization:0 "Optimise the Supply Lines"
- RAJ_supply_lines_optimization_desc:0 "By commissioning the Survey of India to help us optimise the supply lines for the Indian Army, we will be able to defend the Raj more effectively."
- RAJ_supply_lines_optimization_reward:0 "Modify '§YIndian Army§!' by:\nSupply Combat Penalties on Core Territory:§G -2.0%§!\n\nYou can select this £GFX_decision_icon_small §YDecision§! up to §Y5§! times."
- 
- # Montagu Chelmsford Reforms
- RAJ_montagu_chelmsford_reforms_category:0 "Montagu-Chelmsford Reforms"
-
- RAJ_establish_committee_on_home_administration:0 "Establish the Committee on Home Administration"
- RAJ_establish_committee_on_home_administration_reward:0 "The §YCommittee on Home Administration§! will now be established!"
- committee_on_home_administration_established:0 "§YCommittee on Home Administration Established§!"
-
- RAJ_establish_feetham_function_committee:0 "Establish the Feetham Function Committee"
- RAJ_establish_feetham_function_committee_reward:0 "The §YFeetham Function Committee§! will now be established!"
- feetham_function_committee_established:0 "§YFeetham Function Committee Established§!"
-
- RAJ_establish_southborough_franchise_committee:0 "Establish Southborough Franchise Committee"
- RAJ_establish_southborough_franchise_committee_reward:0 "The §YSouthborough Franchise Committee§! will now be established!"
- southborough_franchise_committee_established:0 "§YSouthborough Franchise Committee Established§!"
-
- #Indian Economy
- RAJ_indian_economy_category:0 "Indian Economy"
-
- RAJ_expand_civilian_industry:0 "Expand Civilian Industry"
- RAJ_expand_civilian_industry_desc:0 "Since the introduction of the British administration in the region, the subcontinent has lacked any form of domestic industry, apart from small arms arsenals. Our new programme against stagflation is designed to improve this situation and create new jobs along the way."
- RAJ_organise_public_works:0 "Organise Public Works"
- RAJ_expand_military_industry:0 "Expand Military Industry"
- RAJ_expand_military_industry_desc:0 "We must urge the Ordnance Factory Board to build new arsenals in preparation for the upcoming conflict."
-
- # Propaganda Campaigns
- RAJ_indian_diplomacy_category:0 "Propaganda Campaigns"
- RAJ_indian_diplomacy_category_desc:0 "§YPropaganda Campaigns§! in the Raj are one of the many ways in which our administration maintains its hold on the subcontinent. They are essential to keep the Indian people united and to ensure their support of the [ENG.GetFlag] §YBritish rule§!. However, we cannot run too many §YPropaganda Campaigns§! at once, as this would overload the Indian population, therefore we are limited to §Rthree Propaganda Campaigns§! at a time.\n\nCurrently, we are leading [?indian_diplomacy|Y0]/§Y3 Propaganda Campaigns§!.\n"
- indian_diplomacy_under_3_available:0 " Less than §Y3§! active §YPropaganda Campaigns§!"
-
- this_soldier_is_defending_india:0 "This Soldier is Defending India"
- this_soldier_is_defending_india_desc:0 "\n§Y''This Soldier is Defending India,\nHe is Protecting his Home and his Family.''§!"
- sons_of_the_empire:0 "Sons of the Empire"
- sons_of_the_empire_desc:0 "\n§Y''Sons of the Empire - Canada, India & Australia''§!"
- our_indian_warriors:0 "Our Indian Warriors"
- our_indian_warriors_desc:0 "\n§Y''Our Indian Warriors,\nStaunch and True,\nHave proved their\nworth to all:\nTo guard the Flag\nthey dare and do -\nAt England's\nbattle call!''§!"
- following_in_the_footsteps_of_dod:0 "Following in the Footsteps of the Dear Old Dad"
- following_in_the_footsteps_of_dod_desc:0 "\n§Y''Following in the Footsteps of the Dear Old Dad''§! is a propaganda poster representing Britain as a lion in a British uniform, followed by its cubs, the other states of the Commonwealth."
- outwhiskered:0 "Outwhiskered!"
- outwhiskered_desc:0 "\n§Y''Outwhiskered!''§! is a propaganda poster showing a German soldier with a whiskered moustache being shocked by a brave Sikh soldier with a whiskered moustache and whiskered beard."
- for_india_and_for_empire:0 "For India and for Empire"
- for_india_and_for_empire_desc:0 "\nWe shall send newsletters and posters in regional Indian languages to the British public to support our brave Indian troops in their fight §Y''For India and for Empire''§!."
- our_dusky_allies:0 "Our Dusky Allies"
- our_dusky_allies_desc:0 "\n§Y''Our Dusky Allies''§! is a short film featuring footage of Indian soldiers, symbolising the unity within the Empire in the fight for freedom."
- who_got_money_gun_uniform:0 "Who got that Money, Gun and Uniform?"
- who_got_money_gun_uniform_desc:0 "\n§Y''Who Got that Money, Gun and Uniform? The One Who Shall Join the Army!''§!"
- invest_in_victory:0 "Invest in Victory"
- invest_in_victory_desc:0 "\n§Y''Invest in Victory, this shall help with fighting''§!"
- 
- # Extrasubcontinental Theaters
- extrasubcontinental_theaters_category:0 "Extrasubcontinental Theaters"
-
- decision_cost_CP_25_PP_10:0 "£command_power  §Y15§! £pol_power  §Y10§!"
- decision_cost_CP_25_PP_10_blocked:0 "£command_power  §R15§! £pol_power  §Y10§!"
- decision_cost_CP_25_PP_10_tooltip:0 "It costs £command_power  §Y15§! and £pol_power  §Y10§! to take the decision"
-
- currently_preparing_a_new_theater:0 " Currently Preparing a New Theater"
- recently_prepared_a_new_theater:0 " Recently Prepared a New Theater"
-
- african_theater:0 "Prepare the African Theatre"
- european_theater:0 "Prepare the European Theatre"
- ottoman_theater:0 "Prepare the Ottoman Theatre"
- 
- # Malabar Rebellion
- RAJ_malabar_rebellion_category:0 "Malabar Rebellion"
- RAJ_malabar_rebellion_category_desc:0 "\n[RAJ_madras_rebellion_introduction][malabar_strength]"
- RAJ_madras_rebellion_introduction:0 "                     §Y''It is with the deepest regret, that I inform Government that\n                                   the situation is beyond the District officials.''§!\n\nAs these words echo through the deep valleys of Malabar, the rebels led by §YVariyankunnath Kunjahammad Haji§! are preparing their next raids. With negotiation off the table, our only option is the use of force, which we should use frequently enough if we are not to face §tUnforeseen Consequences§!."
- 
- malabar_strength:0 "\n\nCurrently, the Malabar Rebellion has a strength of: [?malabar_rebellion_strength|Y%%].\n"
-
- malabar_rebellion_started:0 "Malabar Rebellion"
- malabar_rebellion_strength_over_0:0 "Malabar Rebellion Strength > §Y0.00%§!"
- malabar_rebellion_strength_below_50:0 "Malabar Rebellion Strength < §Y50.00%§!"
- malabar_rebellion_strength_below_15:0 "Malabar Rebellion Strength < §Y15.00%§!"
-
- malabar_rebellion_strength_5:0 "The Malabar Rebellion will gain §Y5.00%§! of Strength.\n\n"
- malabar_rebellion_strength_15:0 "The Malabar Rebellion will gain §Y15.00%§! of Strength.\n\n"
- malabar_rebellion_strength_remove_5:0 "The Malabar Rebellion will lose §Y5.00%§! of Strength.\n"
- malabar_rebellion_strength_remove_15:0 "The Malabar Rebellion will lose §Y15.00%§! of Strength.\n\n"
- 
- RAJ_malabar_agitation_mission:0 "Strengthening of the Malabar Rebellion"
- crushed_malabar_rebellion:0 "Has Crushed the Malabar Rebellion"
-
- RAJ_send_governments_troops:0 "Send Government Troops"
- has_sent_governments_troops:0 "Has Sent Government Troops"
- 
- decision_cost_PP_10_CP_15:0 "£command_power §Y15§! £pol_power  §Y10§!"
- decision_cost_PP_10_CP_15_blocked:0 "£command_power §R15§! £pol_power  §Y10§! "
- decision_cost_PP_10_CP_15_tooltip:0 "It costs £command_power §Y15§! and £pol_power  §Y10§! to take the decision"
-
- RAJ_form_the_malabar_special_police:0 "Form the Malabar Special Police"
- decision_cost_PP_25_CP_10:0 "£command_power §Y10§! £pol_power  §Y25§!"
- decision_cost_PP_25_CP_10_blocked:0 "£command_power §R10§! £pol_power  §Y25§!"
- decision_cost_PP_25_CP_10_tooltip:0 "It costs £command_power §Y10§! and £pol_power  §Y25§! to take the decision"
- fire_only_once_reward:0 "§RThis £decision_icon_small §YDecision§! is only selectable once.§!"
-
- RAJ_enlist_from_the_hindu_community:0 "Enlist from the Hindu Community"
-
- RAJ_crush_the_malabar_rebellion:0 "Crush the Malabar Rebellion"
- decision_cost_PP_25_CP_25:0 "£command_power §Y25§! £pol_power  §Y25§!"
- decision_cost_PP_25_CP_25_blocked:0 "£command_power §R25§! £pol_power  §Y25§!"
- decision_cost_PP_25_CP_25_tooltip:0 "It costs £command_power §Y25§! and £pol_power  §Y25§! to take the decision"
- crushed_malabar_rebellion_reward:0 "§RWe will round up the last resistance cells and close this dark chapter in British India's history.§!\n"
-
- # Rampa Rebellion
-
- rampa_strength:0 "\n\nCurrently, the Rampa Rebellion has a strength of: [?rampa_rebellion_strength|Y%%]."
-
- # Old Content #
+ # Old Raj Content #
 
  RAJ_raj_war_timer:0 "Quagmire of the Raj War"
  RAJ_british_remnants_flag:0 "British Remnants in Raj"
